# Linking

./: CMakeLists.txt
Plugin/: CMakeLists.txt
Plugin/src/: Plugin.cpp  Plugin.h  main.cpp
PluginSystem/: CMakeLists.txt
PluginSystem/src/: PluginSystem.cpp  PluginSystem.h
